# macos-web-os

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: deploy.yml
apps/apps/calculator/src/: Calculator.tsx
apps/apps/finder/src/: Finder.tsx
apps/apps/safari/src/: Safari.tsx
apps/apps/system-preferences/src/: SystemPreferences.tsx
apps/apps/terminal/src/: Terminal.tsx
apps/apps/vscode/src/: VSCode.tsx
apps/bootloader/src/: main.ts
apps/kernel/: Cargo.toml
apps/kernel/pkg/: darwin_kernel.d.ts  darwin_kernel.js  darwin_kernel_bg.wasm  darwin_kernel_bg.wasm.d.ts  package.json
apps/kernel/src/: ipc.rs  lib.rs  process.rs  vfs.rs
apps/windowserver/: index.html  package.json  vite.config.ts
apps/windowserver/src/: WindowServer.tsx  globals.css  main.tsx
apps/windowserver/src/apps/: ActivityMonitor.tsx  Calculator.tsx  Camera.tsx  Finder.tsx  Music.tsx  Photos.tsx  Safari.tsx  SystemPreferences.tsx  Terminal.tsx  TextEdit.tsx  VSCode.tsx
apps/windowserver/src/components/: BootScreen.tsx  Desktop.tsx  Dock.tsx  MenuBar.tsx  Window.tsx  WindowFrame.tsx  WindowLayer.tsx
apps/windowserver/src/store/: index.ts  systemStore.ts  windowManager.ts
infra/docker/: Dockerfile  docker-compose.yml  nginx.conf
infra/k8s/: deployment.yaml
scripts/: deploy.sh
