[package]
name = "darwin-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2.90"
js-sys = "0.3.67"
web-sys = { version = "0.3.67", features = ["console", "Window", "Performance"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
indexmap = "2.2.3"
chrono = { version = "0.4.34", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
